# temperature-bot

./: .editorconfig  .gitignore  .gitmodules  .pylintrc  Makefile  README.md  TODO.md  ae200.py  airthings.py  airthings2.py  main.py  notes.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run_local.py  uploader.py  wsgi.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cicd.yml
_Attic/: airthings-output.txt  airthings.py  airthings2.py  airthings_secrets.py  uploader.py
app/: README.md  ae200.py  airnow.py  airquality.py  db.py  google_environment.py  hubitat.py  main.py  paths.py  rules_engine.py  util.py  weather.py
app/static/: Makefile  chart_support.js  rules.js  style.css  unit_speed.js
app/templates/: base.html  chart.html  device_log.html  index.html  privacy.html  rules.html  terms.html
etc/: Makefile  air_basistech_net.service  basistech  basistech_air.service  hubitat-area51.js  sample_device_12.json  sample_hubitat.json  schema.sql  setup_ubuntu.bash  slg1_basistech_net.service  status-sample.json  weather-points.json
google/: appscript_for_sheet.js
myapp/: README.md  ae200.py  airnow.py  app.py  aqi.py  db.py  hubitat.py  main.py  paths.py  util.py  weather.py
static/: Makefile  eslint.config.js  style.css  unit_speed.js
templates/: base.html  index.html  privacy.html  terms.html
tests/: fixtures.py  test_ae200.py  test_airnow.py  test_aqi.py  test_browser_ux.py  test_chart_functionality.py  test_db.py  test_endpoints.py  test_hubitat.py  test_routes.py  test_rules_disable.py  test_runner.py  test_temporal_quantifiers.py
tests/data/: get_device_10.json  get_devices.json
