#
# poetry config virtualenvs.in-project true --scope=global
# poetry install  (by default, installs all groups)
# poetry add <module>
# poetry add --group dev black
# poetry run python script.py
# poetry run pytest
# poetry lock
# poetry show
# poetry show --tree

[project]
name = "temperature-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "websockets",
    "httpx",
    "jinja2",
    "fastapi",
    "fastapi[standard]",
    "uvicorn",
    "python-dotenv" # If you're using it for environment variables
]

authors = [
	{name="Simson Garfinkel", email="simsong@basistech.com"}
]

readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0, <3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "*"
ruff-lsp = "*"
pytest = "*"
pytest-env = "*"
pytest-cov = "*"
pytest-asyncio = "*"
coverage = "*"
livereload = "*"

[tool.poetry]
package-mode = false

[tool.ruff]
exclude = ["lib/"]
